# acreetionos-terminal

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  README.md
.builds/: freebsd.yml  linux.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  docker-build.yml  release.yml
acreetionos/: Cargo.toml  build.rs
acreetionos/src/: cli.rs  clipboard.rs  event.rs  logging.rs  main.rs  message_bar.rs  panic.rs  window_context.rs
acreetionos/src/config/: bell.rs  bindings.rs  color.rs  cursor.rs  debug.rs  font.rs  general.rs  mod.rs  monitor.rs  mouse.rs  scrolling.rs  selection.rs  terminal.rs  ui_config.rs  window.rs
acreetionos/windows/: acreetionos-terminal.rc
acreetionos_config/: Cargo.toml
acreetionos_config/src/: lib.rs
acreetionos_config_derive/: Cargo.toml
acreetionos_config_derive/src/: lib.rs  serde_replace.rs
acreetionos_config_derive/src/config_deserialize/: de_enum.rs  de_struct.rs
acreetionos_config_derive/tests/: config.rs
acreetionos_terminal/: CHANGELOG.md  Cargo.toml
acreetionos_terminal/src/: event_loop.rs  lib.rs
acreetionos_terminal/tests/: ref.rs
docs/: features.md
extra/: acreetionos-terminal.info
extra/completions/: _acreetionos-terminal  acreetionos-terminal.bash  acreetionos-terminal.fish
extra/linux/: com.acreetionos.Terminal.appdata.xml  com.acreetionos.Terminal.desktop
extra/man/: acreetionos-terminal-bindings.5.scd  acreetionos-terminal-escapes.7.scd  acreetionos-terminal-msg.1.scd  acreetionos-terminal.1.scd  acreetionos-terminal.5.scd
(+31 files in other folders)
