[package]
name = "acreetionos_config_derive"
version = "0.2.5"
authors = ["AcreetionOS"]
license = "MIT OR Apache-2.0"
description = "Failure resistant deserialization derive"
homepage = "https://github.com/AcreetionOS/acreetionos-terminal"
repository = "https://github.com/AcreetionOS/acreetionos-terminal"
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.7"
syn = { version = "2.0.16", features = ["derive", "parsing", "proc-macro", "printing"], default-features = false }

[dev-dependencies.acreetionos_config]
path = "../acreetionos_config"
version = "0.2.3"

[dev-dependencies]
log = "0.4.11"
serde = { version = "1.0.117", features = ["derive"] }
toml.workspace = true
